--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/gyufyufyu.png" alt="img"/></figure>
+                              <figure><img src="images/IMG-20210407-WA0001.jpg" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -111,7 +111,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box ">
-                              <figure><img src="images/gyufyufyu.png" alt="img"/></figure>
+                              <figure><img src="images/IMG-20210407-WA0005.jpg" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -130,7 +130,7 @@
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                            <div class="img-box">
-                              <figure><img src="images/gyufyufyu.png" alt="img"/></figure>
+                              <figure><img src="images/IMG-20210407-WA0007.jpg" alt="img"/></figure>
                            </div>
                         </div>
                      </div>
@@ -160,7 +160,28 @@
             <div class="row">
                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
                   <div class="plants-box">
-                     <figure><img src="images/plant1.jpg" alt="img"/></figure>
+                     <figure><img src="images/IMG-20210407-WA0001.jpg" alt="img"/></figure>
+                     <h3> Floral Vibrant</h3>
+                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                  </div>
+               </div>
+               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                  <div class="plants-box">
+                     <figure><img src="images/IMG-20210407-WA0005.jpg" alt="img"/></figure>
+                     <h3> Floral Vibrant</h3>
+                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                  </div>
+               </div>
+               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                  <div class="plants-box">
+                     <figure><img src="images/IMG-20210407-WA0007.jpg" alt="img"/></figure>
+                     <h3> Floral Vibrant</h3>
+                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
+                  </div>
+               </div>
+              <!-- <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
+                  <div class="plants-box">
+                     <figure><img src="images/IMG-20210407-WA0001.jpg" alt="img"/></figure>
                      <h3> Floral Vibrant</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
                   </div>
@@ -178,28 +199,7 @@
                      <h3> Floral Vibrant</h3>
                      <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
                   </div>
-               </div>
-               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                  <div class="plants-box">
-                     <figure><img src="images/plant1.jpg" alt="img"/></figure>
-                     <h3> Floral Vibrant</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                  </div>
-               </div>
-               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                  <div class="plants-box">
-                     <figure><img src="images/plant2.jpg" alt="img"/></figure>
-                     <h3> Floral Vibrant</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                  </div>
-               </div>
-               <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12">
-                  <div class="plants-box">
-                     <figure><img src="images/plant3.jpg" alt="img"/></figure>
-                     <h3> Floral Vibrant</h3>
-                     <p>It is a long established fact that a reader will be distracted by the readable content of a page   when looking at its layout. The point of using Lorem Ipsumletters, as opposed to using</p>
-                  </div>
-               </div>
+               </div>-->
             </div>
          </div>
       </div>
@@ -211,7 +211,7 @@
                <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12">
                   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                      <div class="about-box">
-                        <h2>50</h2>
+                        <h2>100%</h2>
                         <div class="white-bg">
                            <span>Satisfaction</span> 
                         </div>
@@ -219,7 +219,7 @@
                   </div>
                   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                      <div class="about-box">
-                        <h2>50</h2>
+                        <h2>0 LKR</h2>
                         <div class="white-bg">
                            <span>Free Delivery</span> 
                         </div>
@@ -227,7 +227,7 @@
                   </div>
                   <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                      <div class="about-box">
-                        <h2>50</h2>
+                        <h2>1</h2>
                         <div class="white-bg">
                            <span>Store Locators</span> 
                         </div>
@@ -265,11 +265,11 @@
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
                <div class="Gallery-box">
                   <figure>
-                     <a href="images/1.jpg" class="fancybox" rel="ligthbox">
-                     <img  src="images/1.jpg" class="zoom img-fluid "  alt="">
+                     <a href="images/IMG-20210407-WA0006.jpg" class="fancybox" rel="ligthbox">
+                     <img  src="images/IMG-20210407-WA0006.jpg" class="zoom img-fluid "  alt="">
                      </a>
                      <span class="hoverle">
-                     <a href="images/1.jpg" class="fancybox" rel="ligthbox">View</a>
+                     <a href="images/IMG-20210407-WA0006.jpg" class="fancybox" rel="ligthbox">View</a>
                      </span>  
                   </figure>
                </div>
@@ -277,28 +277,28 @@
             <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
                <div class="Gallery-box">
                   <figure>
-                     <a href="images/2.jpg" class="fancybox" rel="ligthbox">
-                     <img  src="images/2.jpg" class="zoom img-fluid "  alt="">
+                     <a href="images/IMG-20210407-WA0003.jpg" class="fancybox" rel="ligthbox">
+                     <img  src="images/IMG-20210407-WA0003.jpg" class="zoom img-fluid "  alt="">
                      </a>
                      <span class="hoverle">
-                     <a href="images/1.jpg" class="fancybox" rel="ligthbox">View</a>
+                     <a href="images/IMG-20210407-WA0003.jpg" class="fancybox" rel="ligthbox">View</a>
                      </span>
                   </figure>
                </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 thumb">
+             <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 thumb">
                <div class="Gallery-box">
                   <figure>
-                     <a href="images/3.jpg" class="fancybox" rel="ligthbox">
-                     <img  src="images/3.jpg" class="zoom img-fluid "  alt="">
+                     <a href="images/IMG-20210407-WA0008.jpg" class="fancybox" rel="ligthbox">
+                     <img  src="images/IMG-20210407-WA0008.jpg" class="zoom img-fluid "  alt="">
                      </a>
                      <span class="hoverle">
-                     <a href="images/3.jpg" class="fancybox" rel="ligthbox">View</a>
+                     <a href="images/IMG-20210407-WA0008.jpg" class="fancybox" rel="ligthbox">View</a>
                      </span>
                   </figure>
                </div>
             </div>
-            <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
+            <!-- <div class="col-xl-3 col-lg-3 col-md-3 col-sm-12 thumb">
                <div class="Gallery-box">
                   <figure>
                      <a href="images/4.jpg" class="fancybox" rel="ligthbox">
@@ -332,7 +332,7 @@
                      <a href="images/6.jpg" class="fancybox" rel="ligthbox">View</a>
                      </span>
                   </figure>
-               </div>
+               </div>-->
             </div>
          </div>
       </div>
@@ -381,9 +381,9 @@
                <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12 paddimg-left">
                   <div class="Nursery-img">
                      <figure>
-                        <img src="images/contactimg.jpg" alt="img"/>
+                        <img src="images/IMG-20210407-WA0007.jpg" alt="img"/>
                         <div class="text-box">
-                           <h3>Best Green Nursery</h3>
+                           <h3>Flora Pots</h3>
                         </div>
                      </figure>
                   </div>
